# mcp-gemini-websearch

./: default.nix  pyproject.toml  server.py
.github/workflows/: ci.yml
tests/: conftest.py  test_cognito_auth.py  test_server.py
